--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -45,7 +45,7 @@
         <hr>
         <div>
           <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
+            <i class="fa fa-facebook white"></i> Connect with Facebook
           </a>
 <!--           <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Connect with Google+
