--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 20px; margin-bottom: 20px; border: 1px solid #dddddd; -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+<div class="container haveBorder" style="margin-top: 20px; margin-bottom: 20px; -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
 	<div class="row background-blue" style="border-bottom: 1px solid #dddddd;">
